--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile project(':openCVLibrary341')
-    compile files('libs/commons-math3-3.6.1.jar')
+    implementation project(':openCVLibrary341')
+    implementation files('libs/commons-math3-3.6.1.jar')
 }
