--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation project(':openCVLibrary341')
     implementation files('libs/commons-math3-3.6.1.jar')
+
+    implementation 'com.google.firebase:firebase-core:12.0.0'
+    implementation 'com.google.firebase:firebase-auth:12.0.0'
+    implementation 'com.google.firebase:firebase-database:12.0.0'
+    implementation 'com.google.android.gms:play-services-auth:12.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
