--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,11 @@ dependencies {
     implementation project(':openCVLibrary341')
     implementation files('libs/commons-math3-3.6.1.jar')
 
-    implementation 'com.google.firebase:firebase-core:12.0.0'
-    implementation 'com.google.firebase:firebase-auth:12.0.0'
-    implementation 'com.google.firebase:firebase-database:12.0.0'
-    implementation 'com.google.android.gms:play-services-auth:12.0.0'
+    implementation 'com.google.firebase:firebase-core:12.0.1'
+    implementation 'com.google.firebase:firebase-auth:12.0.1'
+    implementation 'com.google.firebase:firebase-database:12.0.1'
+    implementation 'com.google.firebase:firebase-storage:12.0.1'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
